@@ -44,5 +44,6 @@ api_include_HEADERS = \
 	na-object-item.h									\
 	na-object-action.h									\
 	na-object-profile.h									\
+	na-object-menu.h									\
 	na-gconf-keys.h										\
 	$(NULL)
